--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "playwright-stealth>=1.0",
     "python-statemachine>=2.5",
     "typer[all]>=0.21",
+    "questionary>=2.0.0",
     "anthropic>=0.40",
     "pydantic>=2.0",
     "requests",
@@ -27,6 +28,7 @@ dev = [
     "pytest>=8.0",
     "pytest-asyncio>=0.24",
     "pytest-cov>=5.0",
+    "pytest-mock>=3.0",
     "mypy>=1.8",
     "ruff>=0.5",
     "python-dotenv>=1.0.0",
