--- a/.gitignore
+++ b/.gitignore
@@ -49,12 +49,24 @@ dmypy.json
 subterminator/output/
 subterminator/mock_pages/netflix/assets/*.png
 *.log
-subterminator/.chrome-profile/
 
 # Per-project .env
 */.env
+
+# Agent sandbox (temporary investigation files)
+agent_sandbox/
+
+# Browser profile
+.chrome-profile/
+**/.chrome-profile/
+
+# project output
+output/
+**/output/
 
 # OS
 .DS_Store
 Thumbs.db
 docs/prds/VICI Claude Code 7-Day Challenge_ Jan 2026.pdf
+**/VICI Claude Code 7-Day Challenge_ Jan 2026.pdf
+subterminator/docs/prds/VICI Claude Code 7-Day Challenge_ Jan 2026.pdf
